[package]
name = "wasmium-security"
version = "0.1.0-alpha.1"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib']

[dependencies]
bincode = "1.3.2"
blake3 = "0.3.7"
camino = {version = "1.0.3", features = ["serde1"] }
ed25519-dalek = { version = "1.0.1",  features = ["serde_crate", "serde"] }
nanorand = "0.5.2"
rand = "0.7"
serde = { version = "1.0.124", features = ["derive"] }
tai64 = { version = "3.1.0", features = ["serde"] }
